--- a/gui/scss/Light.scss
+++ b/gui/scss/Light.scss
@@ -1,122 +1,83 @@
-$light-background-color: #F3F5F5;
-$light-background-border: #EAECEC;
+$light-background-color: #f3f5f5;
+$light-background-border: #eaecec;
 $light-background-box-shadow: #dcdcdc;
 $medium-background-color: #dcdcdc;
 $dark-background-color: #25292a;
 $dark-background-border: #383d3f;
-$dark-background-box-shadow: #383d3f;
+$dark-background-box-shadow: $dark-background-border;
 
 $content-text-color: #25292a;
-
 $light-text-color: #808080;
 
-$bad-color:red;
-$good-color:lightgreen;
-$info-color:#30a6ce;
-$highlight-color: #EBB11F;
+$bad-color: #ff0000;
+$good-color: #90ee90;
+$info-color: #30a6ce;
+$highlight-color: #ebb11f;
 
 // Scrollbar
 $scrollbar-background-color: $medium-background-color;
 $scrollbar-bar-color: adjust-color($dark-background-border, $red: 50, $green: 50, $blue: 50);
 
 // Navigation
-$left-nav-link-text-color: white;
-$left-nav-link-text-hover-color:#383d3f;
-$left-nav-link-text-selected-color: #383d3f;
-$nav-link-bg: #383d3f;
-$sidebar-bg: linear-gradient(135deg, #25292a 0%, #383d3f 98%);
+$left-nav-link-text-color: #ffffff;
+$left-nav-link-text-hover-color: $dark-background-border;
+$left-nav-link-text-selected-color: $dark-background-border;
+$nav-link-bg: $dark-background-border;
+$sidebar-bg: linear-gradient(135deg, $dark-background-color 0%, $dark-background-border 98%);
 
 // editor column
 $editor-column-bg: linear-gradient(to right, #f1f1f1 0%, #ffffff 100%);
-$editor-text-color: black;
+$editor-text-color: #000000;
 $editor-row-hover-bg: #f3f3f3;
 $editor-row-selected-bg: #e7e7e7;
 
-// Tiles
-$tile-text-color: white;
-$tile-text-faded-color: whitesmoke;
-$tile-border: 3px solid white;
-
-$dark-tile-background-color:linear-gradient(16deg, #022442, #124b7d);
-$dark-tile-background-color-inactive: #A9A9A9;
-$dark-tile-background-color-inactive-light: #cecece;
-$light-tile-background-color:linear-gradient(16deg, #339FC0, #46AFC6);
-$light-tile-header-background-color:linear-gradient(16deg, #2A8FAE, #45A8BF);
-
-$secondary-tile-background-color:linear-gradient(16deg, #EC7F2E, #FDA23C);
-$secondary-tile-header-background-color:linear-gradient(16deg, #F17F1E, #F6953A);
-
-$tertiary-tile-background-color:linear-gradient(16deg, #525657, #5A5B5C);
-
-$quaternary-tile-background-color: linear-gradient(16deg, #76BA60, #8CC673);
-$quaternary-tile-header-background-color: linear-gradient(16deg, #6BA65D, #81BD68);
-
-// List
-$list-text-color: $dark-background-color;
-
 // Button Effects
-$effect-background-color: $light-background-color;
-$effect-list-overflow-btn-color: black;
+$effect-list-overflow-btn-color: #000000;
 $effect-list-bg-color: #e3e4e4;
 $effect-option-title: #dfdfdf;
 
 // misc
-$text-dropdown-hover-color: #F3F3F3 -30%;
+$text-dropdown-hover-color: adjust-color(#f3f3f3, $red: -30, $green: -30, $blue: -30);
 $board-settings-btn-color: $light-text-color;
 $change-board-dropdown-color: $light-text-color;
 $downarrow-color: $light-text-color;
-$navbar-collapse-btn: orange;
+$sort-tags-bg: #d3d3d3;
 
 $toggle-button-off-bg-color: #757373;
 
 // Chat Window
-$usercolor: #37aad5;
-$bannedcolor: red;
-$procolor: #b143d1;
-$modcolor: #36e53a;
-$staffcolor: #dcb235;
-$ownercolor: black;
-$alertcolor: red;
-$alert-bg-color: #cecece;
 $chatWhisperColor: #c235ef;
-$chatDeletedColor: gray;
-$chatTextColor: black;
-$chatBorder: #cecece;
+$chatTextColor: #000000;
 $chat-message-alternate-bg: #f9f9f9;
-$sticker-bg-color:lightslategrey;
+$sticker-bg-color:#778899;
 $chat-input-bg-color: #f1f1f1;
 $activity-bg-color: #e6e6e6;
 
 // Connection panel
-$connection-tile-bg: white;
-$connection-tile-title: black;
-$connection-status-bubble-border: #34383A;
+$connection-tile-bg: #ffffff;
+$connection-tile-title: #000000;
+$connection-status-bubble-border: #34383a;
 
 // notifications
-$notification-center-header-color: #f3f5f5;
-$notification-preview-wrapper-color: white;
+$notification-center-header-color: $light-background-color;
+$notification-preview-wrapper-color: #ffffff;
 
 // Bootstrap overrides
-$nav-border-bottom: #b1b1b1;
-$nav-border-hover: rgb(54, 53, 53);
-$nav-border-selected: black;
-$selected-tab-text-color: black;
-$unselected-tab-text-color: #5d5e5f;
-$default-btn-bg-color: white;
+$default-btn-bg-color: #ffffff;
 $default-btn-text-color: #333;
-$default-btn-border: lightgray;
-$default-btn-hover-bg: lightgray;
-$default-btn-hover-border: lightgray;
+$default-btn-border: #d3d3d3;
+$default-btn-hover-bg: #d3d3d3;
+$default-btn-hover-border: #d3d3d3;
 
-$form-control-bg: white;
-$form-control-border: lightgray;
+$form-control-bg: #ffffff;
+$form-control-border: #d3d3d3;
 $form-control-text: #1a1a1a;
-$add-on-group-bg: lightgrey;
+$add-on-group-bg: #d3d3d3;
 $add-on-group-border: transparent;
 $add-on-group-text: inherit;
 
-$dropdown-menu-bg: white;
-$dropdown-menu-border: rgb(206, 208, 208);
+$dropdown-menu-bg: #ffffff;
+$dropdown-menu-border: #ced0d0;
 $dropdown-menu-text: #333;
 $dropdown-menu-divider-color: #e5e5e5;
 
@@ -131,29 +92,27 @@ $alert-warning-bg: #fcf8e3;
 $alert-danger-text-color: #a94442;
 $alert-danger-bg: #f2dede;
 
-$fb-tab-wrapper-bg: white;
+$fb-tab-wrapper-bg: #ffffff;
 $fb-tab-wrapper-border-color: #eaecec;
 $fb-tab-border-bottom-hover: #bfb7b7;
 $fb-tab-hightlight-color: #16809c;
-$fb-unselected-text-color: grey;
+$fb-unselected-text-color: $light-text-color;
 
-$fb-tab-notactive-text-color: #a09a9a;
-$fb-tab-hover-text-color: gray;
-$fb-tab-active-text-color:black;
+$fb-tab-hover-text-color: $light-text-color;
+$fb-tab-active-text-color: #000000;
 
 $fb-tab-divider-color: #a8a8a8;
 
-$project-dropdown-text-color: black;
+$project-dropdown-text-color: #000000;
 
-$fb-tab-title-color: black;
+$fb-tab-title-color: #000000;
 
-$fb-table-row-bg: white;
-$fb-table-row-border: #f3f5f5;
+$fb-table-row-bg: #ffffff;
 $fb-table-shadow: 1px 1px 5px #dedede;
 
 $sys-cmd-expanded-shadow: 3px 3px 5px -2px #dedede;
 
-$integration-row-bg: #f3f5f5;
+$integration-row-bg: $light-background-color;
 
 /* Settings Page */
 $settings-sidebar-bg: #ffffff;
